# DemoLib-Autotools

./: Makefile.am  README.md  configure.ac  demo.pc.in
include/: demo.h  demo_cpp.hpp
include/demo/: demo_types.h
src/: demo.cpp  demo_core.c  demo_core_cpp.cpp
